--- a/style.css
+++ b/style.css
@@ -233,12 +233,6 @@ header{
     margin-top: 14px;
     margin-bottom: 34px;
 }
-/* .run-content button{
-    width: 224px;
-}
-.run-content{
-    margin-left: 22px;
-} */
 .run-content{
     margin-left: 22px;
     text-align: justify;
@@ -470,4 +464,15 @@ hr{
         width: 100%;
     }
 
+    .team-photo{
+        display: grid;
+    grid-template-columns: 1fr;
+
+    }
+
+    .footer-content{
+        display: grid;
+        grid-template-columns: 1fr;
+    }
+    
 }
